# forge-platform

./: .env.example  .gitignore  Makefile  README.md  compose.yaml  specs.md
.github/workflows/: ci.yml  platform-e2e.yml
contracts/: README.md
contracts/events/: agent.run.completed.schema.json  agent.run.requested.schema.json  application.crashed.schema.json  attachment.uploaded.schema.json  autoscaling.override.created.schema.json  build.completed.schema.json  build.requested.schema.json  deployment.completed.schema.json  deployment.failed.schema.json  deployment.started.schema.json  document.uploaded.schema.json  incident.created.schema.json  network.policy.denied.schema.json  (+6 more)
demos/09-full-platform/product/log-worker-rust/: .env.example  Cargo.toml  Dockerfile  forge.yaml
demos/09-full-platform/product/log-worker-rust/src/: config.rs  events.rs  log.rs  main.rs  server.rs
docs/: README.md
scripts/: generate-contracts.sh  lint-openapi.py  reset-local.sh  smoke-test.sh  wait-for-service.sh
services/forge-agents/: Dockerfile  Makefile  README.md  pyproject.toml
services/forge-agents/agents/: deployment-investigator.yaml  docs-assistant.yaml  fixture-echo.yaml  infra-health.yaml  log-summarizer.yaml  release-reviewer.yaml
services/forge-agents/app/: __init__.py  config.py  health.py  logging.py  main.py  permissions.py
services/forge-agents/app/agents/: __init__.py  loader.py  models.py
services/forge-agents/app/api/: __init__.py  agents.py  approvals.py  runs.py  tools.py
services/forge-agents/app/approvals/: __init__.py  metrics.py  store.py
services/forge-agents/app/run/: __init__.py  engine.py  metrics.py  model_client.py  store.py
services/forge-agents/app/tools/: __init__.py  backend_config.py  base.py  control.py  errors.py  events.py  fake.py  http_backend.py  invoker.py  memory.py  metrics.py  models.py  observe.py  platform.py  registry.py  runtime.py  storage.py
services/forge-agents/app/tools/fixtures/: __init__.py  deployment.read.json  events.publish.json  logs.search.json  memory.search.json  memory.upsert.json  metrics.query.json  models.embed.json  models.generate.json  runtime.restart.json  storage.get.json  storage.put.json
services/forge-agents/migrations/: 0001_runs.sql  0002_approvals.sql
services/forge-agents/tests/: conftest.py  test_agent_loader.py  test_agent_models.py  test_agents_api.py  test_approvals.py  test_config.py  test_health.py  test_identity.py  test_memory_tools.py  test_openapi_contract.py  test_permissions.py  test_platform_tools.py  test_run_engine.py  test_runs_api.py  test_schema_validation.py  test_seed_agents.py  test_tool_invoker.py  test_tools_api.py
services/forge-memory/: Cargo.toml  Dockerfile  Makefile  README.md
services/forge-memory/migrations/: 0001_collections.sql  0002_namespace.sql
services/forge-memory/src/: acl.rs  collections.rs  config.rs  health.rs  identity.rs  lib.rs  main.rs  project.rs  scope.rs  state.rs
services/forge-memory/src/api/: collections.rs  mod.rs  query.rs  records.rs  upsert.rs  validate.rs
services/forge-memory/src/clients/: mod.rs  models.rs
services/forge-memory/src/meta/: migrations.rs  mod.rs
services/forge-memory/src/search/: cosine.rs  filter.rs  mod.rs
services/forge-memory/src/store/: local.rs  mod.rs
services/forge-memory/src/vectors/: compact.rs  file.rs  mod.rs
services/forge-memory/tests/: bench_query_10k.rs  collections_integration.rs  embed_integration.rs  health_integration.rs  namespace_acl_integration.rs  query_integration.rs
services/forge-runtime/: .env.example  Cargo.toml  Dockerfile  Makefile  README.md
services/forge-runtime/src/: config.rs  control_client.rs  converge.rs  docker.rs  health.rs  heartbeat.rs  heartbeat_reporter.rs  lifecycle.rs  logs.rs  main.rs  node.rs  prober.rs  status.rs  workload.rs
services/forge-runtime/src/discovery/: client.rs  mod.rs
services/forge-runtime/src/network/: cross_node_test.rs  dns.rs  mod.rs  policy.rs  reconcile.rs  route.rs  wireguard.rs
services/forge-runtime/src/node/: key.rs  mod.rs
services/forge-runtime/src/observability/: mod.rs
services/forge-runtime/src/routes/: logs.rs  mod.rs  node.rs  node_state.rs  status.rs  workloads.rs
services/forge-runtime/src/workload/: env.rs  mod.rs
services/forge-secrets/: .env.example  Cargo.toml  Dockerfile  Makefile  README.md
services/forge-secrets/migrations/: 0001_baseline.sql  0002_secrets.sql  0003_config.sql  0004_service_bindings.sql  0005_audit.sql
services/forge-secrets/src/: config.rs  db.rs  lib.rs  main.rs  state.rs
services/forge-secrets/src/audit/: hook.rs  mod.rs  recorder.rs  routes.rs
services/forge-secrets/src/auth/: action_map.rs  identity_client.rs  middleware.rs  mod.rs
services/forge-secrets/src/bindings/: mod.rs  resolve.rs  routes.rs  store.rs
services/forge-secrets/src/config_store/: mod.rs  routes.rs  store.rs
services/forge-secrets/src/crypto/: aead_alg.rs  data_key.rs  key_provider.rs  mod.rs
services/forge-secrets/src/masking/: mod.rs
services/forge-secrets/src/routes/: data_keys.rs  health.rs  identity.rs  mod.rs
services/forge-secrets/src/secrets/: cipher.rs  mod.rs  routes.rs  store.rs
services/forge-secrets/tests/: audit_masking_test.rs  isolation_test.rs  resolve_test.rs  secrets_test.rs
services/forge-storage/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Makefile  README.md
services/forge-storage/migrations/: 0001_init.sql  0002_storage_path.sql  0003_sha_refcount.sql  0004_quota_blobs.sql
services/forge-storage/src/: config.rs  health.rs  identity.rs  integrity.rs  lib.rs  main.rs  project.rs  quota.rs  signing.rs  state.rs
services/forge-storage/src/api/: buckets.rs  mod.rs  objects.rs  sign.rs  usage.rs  validate.rs
services/forge-storage/src/backend/: local_fs.rs  mod.rs
services/forge-storage/src/http/: mod.rs  range.rs
services/forge-storage/src/meta/: migrations.rs  mod.rs
services/forge-storage/tests/: buckets_isolation.rs  health_integration.rs  objects_integrity.rs  objects_stream.rs  quotas_delete_durability.rs  signed_tokens.rs
(+1939 files in other folders)
