[package]
name = "forge-runtime"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1"
axum = "0.8"
bollard = "0.18"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
futures-util = "0.3"
opentelemetry = { version = "0.32", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["http-proto", "reqwest-client", "trace", "metrics"] }
opentelemetry-semantic-conventions = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio", "trace", "metrics"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
http-body-util = "0.1"
httpmock = "0.7"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util", "time"] }
tower = { version = "0.5", features = ["util"] }
