[package]
name = "forge-secrets"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aes-gcm = "0.10"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls-ring", "postgres", "migrate", "chrono", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
http-body-util = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util", "time"] }
tower = { version = "0.5", features = ["util"] }
