[package]
name = "forge-storage"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "sync", "time", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util", "time", "io-util"] }
tower = { version = "0.5", features = ["util"] }
